--- a/app/views/psd-revised-flow/design-assets-list.html
+++ b/app/views/psd-revised-flow/design-assets-list.html
@@ -68,8 +68,12 @@
             </li>            
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-created-confirmation.html" target="_blank">Confirmation page - case created
-                </a>
+                </a> - version 1 for the route from the cases area
             </li>
+            <li>
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-created-confirmation-via-product-page.html" target="_blank">Confirmation page - case created 2
+                </a> - version 2 for the route from the product record page
+            </li>            
         </ul>   
         
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">       
@@ -336,6 +340,8 @@
              Example of <a href="/psd-revised-flow/new-products-example_your_and_team" class="govuk-link govuk-link--no-visited-state" target="_blank">new table for Your/Team products</a> pages
             </li>
             <li>All changes for the <a href="/psd-revised-flow/new-products-example_all" class="govuk-link govuk-link--no-visited-state" target="_blank">All products</a> - search' page
+            </li>
+            <li>Product record no longer exists <a href="/psd-revised-flow/case-product-no-match/case-product-no-match" class="govuk-link govuk-link--no-visited-state" target="_blank">404</a> - for retired product records (CAP017)
             </li>
            
         </ul>
