--- a/app/views/psd-revised-flow/product-page-owned-by-others.html
+++ b/app/views/psd-revised-flow/product-page-owned-by-others.html
@@ -26,9 +26,11 @@
     </div>
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
-            <!--a href="/psd-revised-flow/product-page-edit.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
-                Edit the product record
-            </a-->                           
+
+            <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14 govuk-!-text-align-centre govuk-!-padding-2 govuk-!-display-inline-block govuk-!-margin-top-4 govuk-!-margin-bottom-6 govuk-link--no-underline opss-border-all" href="/psd-revised-flow/why-are-you-creating-a-case">
+                Create a new case<br class="opss-br-desktop"> for this product
+            </a>            
+
         </div>
     </div>
 </div>              
