--- a/app/views/psd-revised-flow/product-page.html
+++ b/app/views/psd-revised-flow/product-page.html
@@ -22,13 +22,21 @@
             Product <span class="govuk-!-font-weight-regular govuk-!-font-size-27 govuk-!-margin-left-2"><abbr>psd</abbr>-304</span>
         </h1>
 
-        <p class="govuk-body opss-secondary-text">This is a Product Safety Database (<abbr>PSD</abbr>) product record.<!-- Each record has a <abbr>PSD</abbr> number.--></p>
+        <p class="govuk-body opss-secondary-text">This is a Product Safety Database (<abbr>PSD</abbr>) product record.</p>
     </div>
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
+
             <a href="/psd-revised-flow/product-page-edit.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
                 Edit the product record
-            </a>                           
+            </a> 
+
+            <span class="govuk-visually-hidden">|</span>                  
+
+            <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14 govuk-!-text-align-centre govuk-!-padding-2 govuk-!-display-inline-block govuk-!-margin-top-4 govuk-!-margin-bottom-6 govuk-link--no-underline opss-border-all" href="/psd-revised-flow/why-are-you-creating-a-case">
+                Create a new case<br class="opss-br-desktop"> for this product
+            </a>
+
         </div>
     </div>
 </div>              
