--- a/app/views/psd-revised-flow/inc_products_pg_activity.html
+++ b/app/views/psd-revised-flow/inc_products_pg_activity.html
@@ -20,7 +20,7 @@
                             <span class="govuk-!-font-weight-regular">8 May 2022</span>
                         </dt>
                         <dd class="govuk-summary-list__value">
-                           Attachment [file name here] added
+                           Document [file name here] added
                         </dd>
                         <dd class="govuk-summary-list__actions">
                             By Birmingham City Council
@@ -31,7 +31,7 @@
                             <span class="govuk-!-font-weight-regular">8 May 2022</span>
                         </dt>
                         <dd class="govuk-summary-list__value">
-                           Attachment [file name here] removed
+                           Document [file name here] removed
                         </dd>
                         <dd class="govuk-summary-list__actions">
                             By Birmingham City Council
