--- a/app/views/psd-revised-flow/inc_products_pg_content_multi.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_multi.html
@@ -135,8 +135,8 @@
                     </a>
                   </li>
                   <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#attachments-tab-2">
-                      Attachments <span class="govuk-!-font-size-16">(1)</span>
+                    <a class="govuk-tabs__tab" href="#documents-tab-2">
+                      Documents <span class="govuk-!-font-size-16">(1)</span>
                     </a>
                   </li>
                   <li class="govuk-tabs__list-item">
@@ -304,7 +304,8 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-2">
                     <h4 class="govuk-heading-m">Product images</h4>
                   
-                    <p class="govuk-body-s opss-secondary-text">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>  
+                    <p class="govuk-body-s opss-secondary-text">There are 2 images added to this product record. <br class="opss-br-desktop">These are the product images &ndash; they <strong>are not</strong> case evidence images.
+                    </p> 
                     
                     {% include "psd-revised-flow/inc_tab-prod-img-1.html" %}
 
@@ -316,13 +317,16 @@
               
                 </div>
 
-                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="attachments-tab-2">
-                    <h4 class="govuk-heading-m">Product attachments</h4>
+                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="documents-tab-2">
+                    <h4 class="govuk-heading-m">Product documents</h4>
+
+                    <p class="govuk-body-s opss-secondary-text">There are 1 documents added to this product record. <br class="opss-br-desktop">These are product documents - they <strong>are not</strong> case evidence documents.
+                    </p>
 
                     {% include "psd-revised-flow/inc_tab-attachments-x2.html" %}
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To add or remove attachments for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-122</span> product record page <span class="govuk-visually-hidden">to access its attachments</span></a>
+                        To add or remove documents for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-122</span> product record page <span class="govuk-visually-hidden">to access its documents</span></a>
                     </p>                  
               
                 </div>
@@ -408,8 +412,8 @@
                       </a>
                     </li>
                     <li class="govuk-tabs__list-item">
-                      <a class="govuk-tabs__tab" href="#attachments-tab-1">
-                        Attachments <span class="govuk-!-font-size-16">(2)</span>
+                      <a class="govuk-tabs__tab" href="#documents-tab-1">
+                        Documents <span class="govuk-!-font-size-16">(2)</span>
                       </a>
                     </li>
                     <li class="govuk-tabs__list-item">
@@ -591,7 +595,8 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-1">
                     <h4 class="govuk-heading-m">Product images</h4>
 
-                    <p class="govuk-body-s opss-secondary-text">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>
+                    <p class="govuk-body-s opss-secondary-text">There are 3 images added to this product record. <br class="opss-br-desktop">These are the product images &ndash; they <strong>are not</strong> case evidence images.
+                    </p>
 
                     {% include "psd-revised-flow/inc_tab-prod-img-1.html" %}
 
@@ -606,13 +611,16 @@
               
                 </div>
 
-                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="attachments-tab-1">
-                    <h4 class="govuk-heading-m">Product attachments</h4>
+                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="documents-tab-1">
+                    <h4 class="govuk-heading-m">Product documents</h4>
+
+                    <p class="govuk-body-s opss-secondary-text">There are 2 documents added to this product record. <br class="opss-br-desktop">These are product documents - they <strong>are not</strong> case evidence documents.
+                    </p>
 
                     {% include "psd-revised-flow/inc_tab-attachments-x2.html" %}
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        You cannot edit these attachments, but you can <a href="/psd-revised-flow/contact-prod-owner.html" class="govuk-link govuk-link--no-visited-state">contact the <span class="govuk-visually-hidden">psd-304</span> product record owner<span class="govuk-visually-hidden"> about its attachments</span></a><br class="opss-br-desktop"> with additional product information or corrections                         
+                        You cannot edit these documents, but you can <a href="/psd-revised-flow/contact-prod-owner.html" class="govuk-link govuk-link--no-visited-state">contact the <span class="govuk-visually-hidden">psd-304</span> product record owner<span class="govuk-visually-hidden"> about its documents</span></a><br class="opss-br-desktop"> with additional product information or corrections                         
                     </p>                  
               
                 </div>
@@ -700,8 +708,8 @@
                     </a>
                   </li>
                   <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#attachments-tab-3">
-                      Attachments <span class="govuk-!-font-size-16">(0)</span>
+                    <a class="govuk-tabs__tab" href="#documents-tab-3">
+                      Documents <span class="govuk-!-font-size-16">(0)</span>
                     </a>
                   </li>
                   <li class="govuk-tabs__list-item">
@@ -876,7 +884,8 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-3">
                     <h4 class="govuk-heading-m">Product images</h4>
                   
-                    <p class="govuk-body-s opss-secondary-text">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>                        
+                    <p class="govuk-body-s opss-secondary-text">There are 1 images added to this product record. <br class="opss-br-desktop">These are the product images &ndash; they <strong>are not</strong> case evidence images.
+                    </p>                        
 
                     {% include "psd-revised-flow/inc_tab-prod-img-1.html" %}
 
@@ -886,13 +895,16 @@
               
                 </div>
 
-                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="attachments-tab-3">
-                    <h4 class="govuk-heading-m">Product attachments</h4>
+                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="documents-tab-3">
+                    <h4 class="govuk-heading-m">Product documents</h4>
 
-                    {% include "psd-revised-flow/inc_tab-attachments-x2.html" %}
+                    <p class="govuk-body-s opss-secondary-text">There are 0 documents added to this product record. <br class="opss-br-desktop">These are product documents - they <strong>are not</strong> case evidence documents.
+                    </p>
+
+                    
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To add or remove attachments for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-526</span> product record page <span class="govuk-visually-hidden">to access its attachments</span></a>
+                        To add or remove documents for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-526</span> product record page <span class="govuk-visually-hidden">to access its documents</span></a>
                     </p>                  
               
                 </div>
