--- a/app/views/psd-revised-flow/inc_products_pg_content_yorkshire-owner.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_yorkshire-owner.html
@@ -139,8 +139,8 @@
                       </a>
                     </li>
                     <li class="govuk-tabs__list-item">
-                      <a class="govuk-tabs__tab" href="#attachments-tab-1">
-                        Attachments <span class="govuk-!-font-size-16">(2)</span>
+                      <a class="govuk-tabs__tab" href="#documents-tab-1">
+                        Documents <span class="govuk-!-font-size-16">(2)</span>
                       </a>
                     </li>
                     <li class="govuk-tabs__list-item">
@@ -320,7 +320,8 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-1">
                     <h4 class="govuk-heading-m">Product images</h4>
 
-                    <p class="govuk-body-s opss-secondary-text">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>
+                    <p class="govuk-body-s opss-secondary-text">There are 2 images added to this product record. <br class="opss-br-desktop">These are the product images &ndash; they <strong>are not</strong> case evidence images.
+                    </p>
  
                     {% include "psd-revised-flow/inc_tab-prod-img-1.html" %}
 
@@ -334,13 +335,13 @@
               
                 </div>
 
-                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="attachments-tab-1">
-                    <h4 class="govuk-heading-m">Product attachments</h4>
+                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="documents-tab-1">
+                    <h4 class="govuk-heading-m">Product documents</h4>
 
                     {% include "psd-revised-flow/inc_tab-attachments-x2.html" %}
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        You cannot edit these attachments, but you can <a href="/psd-revised-flow/contact-prod-owner.html" class="govuk-link govuk-link--no-visited-state">contact the <span class="govuk-visually-hidden">psd-304</span> product record owner<span class="govuk-visually-hidden"> about its attachments</span></a><br class="opss-br-desktop"> with additional product information or corrections                         
+                        You cannot edit these documents, but you can <a href="/psd-revised-flow/contact-prod-owner.html" class="govuk-link govuk-link--no-visited-state">contact the <span class="govuk-visually-hidden">psd-304</span> product record owner<span class="govuk-visually-hidden"> about its documents</span></a><br class="opss-br-desktop"> with additional product information or corrections                         
                     </p>                  
               
                 </div>
