--- a/app/views/psd-revised-flow/case-product-no-match.html
+++ b/app/views/psd-revised-flow/case-product-no-match.html
@@ -15,12 +15,32 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Product record does not exist
+            The product record does not exist
         </h1>
 
         <p class="govuk-body govuk-!-margin-bottom-9">
             A product record matching <span class="govuk-!-font-weight-bold"><abbr>psd</abbr>-302</span> does not exist or is no longer available.
         </p>
+
+        <p class="govuk-body">
+            These closed cases were originally linked to the product record (and are now linked to their own copy of the original product record).
+        </p>
+
+        <div class="opss-2-col-flow">
+            <ul class="govuk-list govuk-list--bullet">
+                <li>
+                    <a href="#" class="govuk-link govuk-link--no-visited-state">Lorem ipsum case name</a>
+                </li>
+                <li>
+                    <a href="#" class="govuk-link govuk-link--no-visited-state">Consectetur adipisicing elit</a>
+                </li>
+                <li>
+                    <a href="#" class="govuk-link govuk-link--no-visited-state">Obcaecati quo ipsa nulla</a>
+                </li>                        
+            </ul>
+        </div>
+
+        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
         <p class="govuk-body">
             <a href="#" class="govuk-link govuk-link--no-visited-state">Search for product records</a>
