--- a/app/views/psd-revised-flow/inc_products_pg_attachments.html
+++ b/app/views/psd-revised-flow/inc_products_pg_attachments.html
@@ -1,21 +1,8 @@
 
-                <div class="govuk-grid-row">
-                    <div class="govuk-grid-column-two-thirds">
-                        <p class="govuk-body opss-secondary-text">There are 4 attachments added to this product record.</p>
-                    </div>
-                    <div class="govuk-grid-column-one-third">
-                        <div class="opss-text-align-right opss-margin-bottom-1-desktop">
-                            <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
-                                Add an attachment
-                            </a>
-                        </div>
-                    </div>                    
-                </div>
-
                 <ul class="govuk-list">
-                    <li>
+                    <!--li>
                 
-                        <dl class="govuk-summary-list govuk-!-padding-bottom-6 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--sm-font"><!--  opss-summary-list-mixed--sm-font -->
+                        <dl class="govuk-summary-list govuk-!-padding-bottom-6 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--sm-font">
                             <div class="govuk-summary-list__row">
                                 <dt class="govuk-summary-list__key">
                                 Type
@@ -50,7 +37,7 @@
                             </div>
                         </dl>
                 
-                    </li>
+                    </li-->
                     <li>
                 
                         <dl class="govuk-summary-list govuk-!-padding-bottom-6 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--sm-font">
@@ -128,7 +115,7 @@
                         </dl>
                 
                     </li>
-                    <li>
+                    <!--li>
                 
                         <dl class="govuk-summary-list govuk-!-padding-bottom-6 opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--sm-font">
                             <div class="govuk-summary-list__row">
@@ -166,5 +153,5 @@
                 
                         </dl>
                 
-                    </li>                    
+                    </li-->                    
                 </ul>
