--- a/app/views/psd-revised-flow/inc_products_pg_content_timestamped.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_timestamped.html
@@ -125,8 +125,8 @@
                     </a>
                   </li>
                   <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#attachments-tab-2">
-                      Attachments <span class="govuk-!-font-size-16">(1)</span>
+                    <a class="govuk-tabs__tab" href="#documents-tab-2">
+                      Documents <span class="govuk-!-font-size-16">(1)</span>
                     </a>
                   </li>
                   <li class="govuk-tabs__list-item">
@@ -302,7 +302,8 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-2">
                     <h4 class="govuk-heading-m">Product images</h4>
                   
-                    <p class="govuk-body-s opss-secondary-text">These are the product images &ndash; they <strong>are not</strong> the case evidence images.</p>   
+                    <p class="govuk-body-s opss-secondary-text">There are 2 images added to this product record. <br class="opss-br-desktop">These are the product images &ndash; they <strong>are not</strong> case evidence images.
+                    </p>   
                     
                     {% include "psd-revised-flow/inc_tab-prod-img-1.html" %}
 
@@ -316,8 +317,8 @@
               
                 </div>
 
-                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="attachments-tab-2">
-                    <h4 class="govuk-heading-m">Product attachments</h4>
+                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="documents-tab-2">
+                    <h4 class="govuk-heading-m">Product documents</h4>
 
                     {% include "psd-revised-flow/inc_tab-attachments-x2.html" %}
 
