--- a/app/views/psd-revised-flow/product-page.html
+++ b/app/views/psd-revised-flow/product-page.html
@@ -77,8 +77,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#accordion-attachments" class="govuk-link govuk-link--no-visited-state">
-                            Attachments <span>(4)</span>
+                        <a href="#accordion-documents" class="govuk-link govuk-link--no-visited-state">
+                            Documents <span>(2)</span>
                         </a>
                     </li>  
                     <li>
@@ -348,12 +348,33 @@
             <div class="govuk-accordion__section">
               <div class="govuk-accordion__section-header">
                 <h2 class="govuk-accordion__section-heading">
-                  <span class="govuk-accordion__section-button" id="accordion-attachments">
-                    Attachments <span class="govuk-!-font-weight-regular govuk-!-font-size-19">(4)</span>
+                  <span class="govuk-accordion__section-button" id="accordion-documents">
+                    Documents <span class="govuk-!-font-weight-regular govuk-!-font-size-19">(2)</span>
                   </span>
                 </h2>
               </div>
-              <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-attachments">
+              <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-documents">
+
+                <div class="govuk-grid-row">
+                    <div class="govuk-grid-column-two-thirds">
+                        <p class="govuk-body opss-secondary-text">There are 2 product documents added to this product record.</p>
+                    </div>
+                    <div class="govuk-grid-column-one-third">
+                        <div class="opss-text-align-right opss-margin-bottom-1-desktop">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+                                Add a document
+                            </a>
+                        </div>
+                    </div>                    
+                </div>
+
+                <div class="govuk-inset-text govuk-!-margin-top-0">
+
+                    <p class="govuk-body-s">
+                        These documents should only include <span class="govuk-!-font-weight-bold">product specific information</span>. For example, the product warranty, its operating manual, or a manufacturer's assembly instructions. Case specific information - such as test results, corrective actions, or information about incidents - should be added to your case.
+                    </p>
+
+                </div>
 
                 {% include "psd-revised-flow/inc_products_pg_attachments.html" %}
 
