--- a/app/views/psd-revised-flow/product-created-confirmation.html
+++ b/app/views/psd-revised-flow/product-created-confirmation.html
@@ -21,7 +21,9 @@
             </div>
         </div>
 
-        <p class="govuk-body">The product record will now appear in <a href="[go to: Your products]]" class="govuk-link govuk-link--no-visited-state">your products list</a>.</p>
+        <!--p class="govuk-body">The product record will now appear in <a href="[go to: Your products]]" class="govuk-link govuk-link--no-visited-state">your products list</a>.</p-->
+
+        <p class="govuk-body">The product record will now appear in search results for <a href="[go to: All products - search page]]" class="govuk-link govuk-link--no-visited-state">all products</a>.</p>        
 
         <div class="govuk-inset-text">
             <span class="govuk-!-font-weight-bold govuk-!-display-inline-block govuk-!-margin-bottom-4">
