--- a/app/views/psd-revised-flow/design-assets-list.html
+++ b/app/views/psd-revised-flow/design-assets-list.html
@@ -17,7 +17,7 @@
                 <div class="govuk-grid-column-two-thirds">
 
                     <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
-                        New <abbr>HTML</abbr>/design page templates for revised cases/products
+                        New <abbr>HTML</abbr>/design page templates for revised cases/products - v1
                     </h1>
 
                     <p class="govuk-body opss-secondary-text">
