--- a/app/views/psd-revised-flow/case-trading-stds-landing-new-case.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-new-case.html
@@ -263,7 +263,7 @@
 
         <h4 class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1 opss-secondary-text">
             <!--A product has not been added to this case-->
-            You can add this information when you add a product 
+            You can add this information after a product has been added 
         </h4>
 
         <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
@@ -275,9 +275,9 @@
                     
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                                        <a href="edit-batch-numbers" class="govuk-link govuk-link--no-visited-state">
+                                        <!--a href="edit-batch-numbers" class="govuk-link govuk-link--no-visited-state">
                         Edit<span class="govuk-visually-hidden"> the batch numbers for Asda washing up liquid</span>
-                    </a>
+                    </a-->
                 </dd>                
             </div>  
             <div class="govuk-summary-list__row">
@@ -288,9 +288,9 @@
                     
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="edit-customs-codes" class="govuk-link govuk-link--no-visited-state">
+                    <!--a href="edit-customs-codes" class="govuk-link govuk-link--no-visited-state">
                         Edit<span class="govuk-visually-hidden"> the customs codes for Asda washing up liquid</span>
-                    </a>
+                    </a-->
                 </dd>                
             </div>
             <div class="govuk-summary-list__row">
@@ -301,9 +301,9 @@
                     
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="edit-units-affected" class="govuk-link govuk-link--no-visited-state">
+                    <!--a href="edit-units-affected" class="govuk-link govuk-link--no-visited-state">
                         Edit<span class="govuk-visually-hidden"> the units affected for Asda washing up liquid</span>
-                    </a>
+                    </a-->
                 </dd>                
             </div>              
         </dl>        
