--- a/app/views/psd-revised-flow/case-trading-stds-landing-new-case.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-new-case.html
@@ -263,7 +263,7 @@
 
         <h4 class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1 opss-secondary-text">
             <!--A product has not been added to this case-->
-            You can add this information after a product has been added 
+            You can add this information after a product has been added to the case
         </h4>
 
         <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
