--- a/app/views/psd-revised-flow/design-assets-list.html
+++ b/app/views/psd-revised-flow/design-assets-list.html
@@ -8,7 +8,7 @@
 
 
 {% block content %}
-
+xxxxxxxxxxxxxxxxxxxx
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <div class="govuk-!-margin-top-4 govuk-!-padding-bottom-4">
