--- a/app/assets/sass/opss/_opss-msa.scss
+++ b/app/assets/sass/opss/_opss-msa.scss
@@ -396,6 +396,7 @@ tbody.opss-table-grouped-by--2 + tbody.opss-table-grouped-by--none {
 }
 
 /*.opss-text-align-right > form > select {min-width: none; }*/
+select {min-width: 11.5em} /*localhost version not styling like new gds v?*/
 
 /* used on the search page - starts.  (Required for filters in left col on search pgs) */
 body.js-enabled .govuk-radios__conditional--hidden.opss-nojs-hide {
