case specific information work

--- a/app/views/cosmetics-general/ingredients-list-02.html
+++ b/app/views/cosmetics-general/ingredients-list-02.html
@@ -26,7 +26,7 @@
         </h1>
 
         <p class="govuk-body opss-secondary-text">
-            Ingredient <span class="govuk-!-font-weight-bold">Lorem ipsum</span> is included in notifications by these Responsible Persons (after 2 October 2022). From here you can view all the notifications by the Responsible Person which includes the ingredient.
+            Ingredient Lorem ipsum is included in notifications by these Responsible Persons (after 2 October 2022). From here you can view all the notifications by the Responsible Person which includes the ingredient.
         </p>
 
     </div>
