--- a/app/views/psd-revised-flow/design-assets-list.html
+++ b/app/views/psd-revised-flow/design-assets-list.html
@@ -195,7 +195,16 @@
             </li>
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/help.html" target="_blank">Case page - Help</a>
+            </li>   
+            <li>
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-empty-specific-values.html" target="_blank">Case page - case specific information</a> with no values
+            </li>              
+            <li>
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-case-specific-x2-1-new.html" target="_blank">Case page - case specific information</a> 2x products with no values
             </li>            
+
+
+            
 
         </ol>
 
