--- a/app/views/psd-revised-flow/remove-product.html
+++ b/app/views/psd-revised-flow/remove-product.html
@@ -31,8 +31,16 @@
                 <div class="govuk-hint" id="remove-hint">
                     The product record 'Asda dishwashing liquid' (<abbr>psd</abbr>-304) will be removed from the case.
                 </div>
+
+                <div class="govuk-warning-text">
+                    <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                    <strong class="govuk-warning-text__text">
+                      <span class="govuk-warning-text__assistive">Warning</span>
+                      Related Batch numbers, Customs codes and Units affected will be deleted from the case.
+                    </strong>
+                </div>                
     
-                <div class="govuk-radios govuk-!-padding-top-3 govuk-!-padding-bottom-1">
+                <div class="govuk-radios govuk-!-padding-bottom-1">
                     <div class="govuk-radios__item">
                         <input class="govuk-radios__input" id="remove" name="remove" type="radio" value="yes">
                         <label class="govuk-label govuk-radios__label" for="remove">
