--- a/app/views/cosmetics-general/ingredients-list-03.html
+++ b/app/views/cosmetics-general/ingredients-list-03.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<div class="govuk-breadcrumbs">
+<!--div class="govuk-breadcrumbs">
     <ol class="govuk-breadcrumbs__list">
       <li class="govuk-breadcrumbs__list-item">
         <a class="govuk-breadcrumbs__link" href="ingredients-list-01.html">Ingredients list</a>
@@ -19,20 +19,20 @@
         <a class="govuk-breadcrumbs__link" href="#">Notifications</a>
       </li>      
     </ol>
-</div>
+</div-->
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s"> 
 
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
-            Ingredients list <span class="govuk-caption-l govuk-!-display-inline-block">- Notifications</span> 
+            Ingredients list - <span class="govuk-!-font-weight-regular opss-font-size--reduced-s">Notifications</span>
         </h1>
 
 
         <p class="govuk-body opss-secondary-text">
             <!--Ingredient <span class="govuk-!-font-weight-bold">Lorem ipsum</span> is included in these notifications by Lorem ipsum (after 2 October 2022).-->
 
-            These are all the notifications by Lorem ipsum (submitted after 2 October 2022) which include the ingredient Lorem ipsum.
+            These are all the notifications by Lorem ipsum (notified after 2 October 2022) which include the ingredient Lorem ipsum.
         </p>
 
     </div>
@@ -58,16 +58,88 @@
                         Ingredients search
                     </a>
                 </li>
-                <li>
-                    <a href="/cosmetics-general/ingredients-list-01.html" class="govuk-link govuk-link--no-visited-state">Ingredients list</a>
+                <li class="opss-left-nav__active">
+                    <a href="/cosmetics-general/ingredients-list-01.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-regular">Ingredients list</a>
+
+                    <ul class="govuk-list">
+                        <li>
+                            <a href="/cosmetics-general/ingredients-list-02.html" class="govuk-link govuk-link--no-visited-state">
+                                Responsible Persons
+                            </a>
+
+                            <ul class="govuk-list">
+                                <li>
+                                    <a href="/cosmetics-general/ingredients-list-03.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold opss-link--no-hover" aria-current="page">
+                                        Notifications
+                                    </a>
+                                </li>                                 
+                            </ul>
+                        </li>
+                 
+                    </ul>                    
                 </li>
             </ul>
         </nav>
 
         <hr class="govuk-section-break govuk-section-break--visible govuk-!-margin-top-1 govuk-!-margin-bottom-6 govuk-!-margin-right-6">
+        
+        <form>
+            <div class="govuk-form-group opss-form-group opss-form-group--sm-labels">
+            
+                <fieldset class="govuk-fieldset">
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s govuk-!-font-weight-regular">
+                        Notifications filter
+                    </legend>  
+                
+                    <div class="govuk-radios govuk-radios--small" data-opss-reset-to-default="element" data-module="govuk-radios">
+                        <div class="govuk-radios__item">
+                            <input id="active" name="notifications" type="radio" value="active" class="govuk-radios__input" checked="checked">
+                            <label class="govuk-label govuk-radios__label" for="active">Active notifications</label>
+                        </div>
+                
+                        <div class="govuk-radios__item">
+                            <input id="archived" name="notifications" type="radio" value="archived" class="govuk-radios__input">
+                            <label class="govuk-label govuk-radios__label" for="archived">Archived notifications</label>
+                        </div>
+                
+                        <div class="govuk-radios__item">
+                            <input id="both" name="notifications" type="radio" value="both" class="govuk-radios__input">
+                            <label class="govuk-label govuk-radios__label" for="both">Both</label>
+                        </div>
+                
+                    </div>
+                </fieldset>
 
 
-        <p class="govuk-body-s opss-secondary-text">Filter: include archived <br>(Update btn)</p>
+
+                <!--div class="govuk-form-group">
+                    <fieldset class="govuk-fieldset">
+                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--s govuk-!-font-weight-regular">
+                            Filters
+                        </legend>
+                        <div class="govuk-checkboxes govuk-checkboxes--small">
+                            <div class="govuk-checkboxes__item">
+                                <input class="govuk-checkboxes__input" id="archived" name="organisation" type="checkbox" value="archived">
+                                <label class="govuk-label govuk-checkboxes__label" for="archived">
+                                    Include archived notifications
+                                </label>
+                            </div>
+                        </div>
+                    </fieldset>
+                </div-->
+
+
+
+                
+            </div>
+
+            <div class="govuk-button-group">
+                <button type="submit" class="govuk-button">
+                    Apply
+                </button>
+            </div>
+
+        </form>
 
     </section>
 
@@ -102,7 +174,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
                 <p class="govuk-body-s">
-                    There are currently 96 active notifications by Lorem ipsum which include the ingredient Lorem ipsum (notified after 2 October 2022).
+                    There are currently 96 active notifications by Lorem ipsum (notified after 2 October 2022) which include the ingredient Lorem ipsum.
                 </p>                    
             </div>
         </div>
